# IRLI

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .env.example  environment.yml  pyproject.toml  requirements.txt
backend/app/: config.py  jobs.py  main.py  worker.py
backend/app/api/: ingestion_logs.py  jobs.py  labs.py  routes.py
backend/app/db/: database.py  init.py  models.py
backend/app/models/: lab.py
backend/app/seeds/: faculty_urls.py
backend/app/services/: crawler.py  discoverer.py  embeddings.py  extractor.py  ingestion.py  lab_crawler.py  link_extraction.py  llm_client.py  metrics_enricher.py  scheduler.py  topic_expansion.py
backend/debug/: debug_run.py  enrich_run.py  ingest_run.py  stubs.py
backend/migrations/: 001_create_lab_profiles.sql  002_add_technologies.sql  003_add_publication_metrics.sql  004_add_representative_papers.sql  005_add_fulltext_search.sql  006_add_ingestion_logs.sql  007_embedding_1024.sql  008_add_pg_trgm.sql  009_embedding_384.sql
backend/supabase/.temp/: pooler-url  project-ref
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/labs/[id]/: page.tsx
frontend/src/components/: ActiveFilterPills.tsx  LabCard.tsx  LabDetail.tsx  SearchBar.tsx  SearchFilters.tsx  SearchSection.tsx
frontend/src/lib/: api.ts  universities.ts
